name:                H99
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/H99#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2017 Example Author Name
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable H99
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
